Add error rendering to forms

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -79,6 +79,15 @@ $content-spacing: 10px;
         a {
           font-size: 11px;
         }
+
+        ul {
+          font-weight: normal;
+          font-size: 11px;
+
+          li {
+            margin-bottom: 3px;
+          }
+        }
       }
     }
   }
