Add demo signon and some more styling

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -1,6 +1,6 @@
 $link-color: blue;
 
-$input-box-background: white;
+$input-box-background: #FEFEFE;
 
 $button-shading: #202020;
 
@@ -10,10 +10,13 @@ $pane-edge-shadow: #707070;
 $desktop-green: #00807F;
 $ui-gray: #C0C0C0;
 
-$title-bar-text: white;
+$title-bar-text: #FEFEFE;
 $mid-title-bar-gradient: #073E9E;
 $title-bar-gradient-left: #08008E;
 $title-bar-gradient-right: #75B3D3;
 
 $square-title-logo-blue: #095FA8;
-$square-title-logo-white: white;
+$square-title-logo-white: #FEFEFE;
+$square-title-logo-yellow: #FDEC54;
+
+$screenname-font: #2D2E5F;
