Set up messages controller

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -60,7 +60,7 @@ $content-spacing: 10px;
           font-style: italic;
           transform: translateX(-8px);
 
-          color: $square-title-logo-yellow
+          color: $square-title-logo-yellow;
         }
 
         h2 {
