Messages api util running

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,6 @@
-<% signed_in = signed_in? %>
+<% signed_on = signed_on? %>
 <script type="text/javascript">
-  <% if signed_in %>
+  <% if signed_on %>
     window.currentUser = <%=
       render(
         "api/users/user.json.jbuilder",
