Basic buddy list styling

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -28,7 +28,7 @@ header.title-bar {
 }
 
 hr.hr-divider {
-  margin-top: 5px;
+  margin: 2.5px 0;
 
   border-top: 1px solid $hr-dark-shadow;
   border-bottom: 1px solid $hr-light-shadow;
