Set up window opening from buddy list

--- a/app/assets/stylesheets/chat/buddy_list.scss
+++ b/app/assets/stylesheets/chat/buddy_list.scss
@@ -16,9 +16,15 @@
 
   display: flex;
   flex-flow: column;
+}
 
-  label {
-    margin-bottom: 3px;
+.button-row {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+
+  button {
+    font-size: 13px;
   }
 }
 
