--- a/app/assets/stylesheets/chat/buddy_list.scss
+++ b/app/assets/stylesheets/chat/buddy_list.scss
@@ -12,7 +12,7 @@
 .buddy-list-content {
   flex: 1;
 
-  padding: 5px 10px;
+  padding: 5px;
 
   display: flex;
   flex-flow: column;
@@ -40,25 +40,6 @@
 
     &:hover {
       background-color: $square-title-logo-yellow;
-    }
-  }
-}
-
-.add-channel {
-  box-sizing: border-box;
-
-  input {
-    width: 100%;
-
-  }
-  ul {
-    @include text-input;
-    height: 100px;
-    padding: 5px 8px;
-    overflow: scroll;
-
-    li {
-      cursor: pointer;
     }
   }
 }
