--- a/app/assets/stylesheets/chat/chat_window.scss
+++ b/app/assets/stylesheets/chat/chat_window.scss
@@ -13,7 +13,7 @@ $window-content-padding-horz: 10px;
 
   @include windows-95-pane;
 
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .chat-window-content {
@@ -32,7 +32,7 @@ $window-content-padding-horz: 10px;
     align-items: center;
 
     button {
-      margin: 5px 5px;
+      margin: 5px;
     }
   }
 }
