--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -25,6 +25,8 @@ header.title-bar {
   font-size: 14px;
   font-family: serif;
   font-weight: bold;
+
+  cursor: default;
 }
 
 header.title-bar-with-exit {
