Switch windows to fixed

--- a/app/assets/stylesheets/chat/chat_main.scss
+++ b/app/assets/stylesheets/chat/chat_main.scss
@@ -2,23 +2,23 @@
   width: 100%;
   height: 100%;
 
-  display: flex;
-  flex-direction: row;
+  // display: flex;
+  // flex-direction: row;
+  //
+  // align-items: center;
+  // justify-content: center;
 
-  align-items: center;
-  justify-content: center;
-
-  // Buddy List
-  section:first-child {
-    margin: auto 60px;
-  }
-
-  // Chat windows
-  section:last-child {
-    flex: 1;
-
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-  }
+  // // Buddy List
+  // section:first-child {
+  //   margin: auto 60px;
+  // }
+  //
+  // // Chat windows
+  // section:last-child {
+  //   flex: 1;
+  //
+  //   display: flex;
+  //   flex-flow: column;
+  //   align-items: center;
+  // }
 }
