--- a/app/assets/stylesheets/utility_windows/utility_windows_main.scss
+++ b/app/assets/stylesheets/utility_windows/utility_windows_main.scss
@@ -1,6 +1,6 @@
 
-.utility-windows {
-  > li {
-    margin-bottom: 20px;
-  }
-}
+// .utility-windows {
+//   > li {
+//     margin-bottom: 20px;
+//   }
+// }
