--- a/app/assets/stylesheets/chat/chat_window.scss
+++ b/app/assets/stylesheets/chat/chat_window.scss
@@ -54,5 +54,9 @@ $window-content-padding-horz: 10px;
     .foreignUser-message {
       color: red;
     }
+
+    span {
+      cursor: pointer;
+    }
   }
 }
