--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Slink</title>
     <%= csrf_meta_tags %>
 
+    <link href="https://www.fontify.me/wf/1cc89de3d33c62b9e9d8cdb0afa715aa" rel="stylesheet" type="text/css">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
