--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,10 @@
     <title>Slink</title>
     <%= csrf_meta_tags %>
 
-    <link href="https://www.fontify.me/wf/1cc89de3d33c62b9e9d8cdb0afa715aa" rel="stylesheet" type="text/css">
+    <%= stylesheet_link_tag 'https://www.fontify.me/wf/1cc89de3d33c62b9e9d8cdb0afa715aa' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= favicon_link_tag 'http://res.cloudinary.com/dfawecall/image/upload/t_media_lib_thumb/v1500956186/Logomakr_5NM6R1_ibdrdc.png' %>
   </head>
 
   <body>
