--- a/app/assets/stylesheets/chat/buddy_list.scss
+++ b/app/assets/stylesheets/chat/buddy_list.scss
@@ -61,7 +61,7 @@
       li {
         cursor: pointer;
 
-        &:hover {
+        span:hover {
           background-color: $square-title-logo-yellow;
         }
       }
