Clean up add channel window

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -13,6 +13,8 @@ $inset-white: white;
 $hr-dark-shadow: #808080;
 $hr-light-shadow: #FFFFFF;
 
+$highlight-color: #FFFF00;
+
 // Desktop color
 $desktop-green: #00807F;
 
