--- a/app/assets/stylesheets/utility_windows/add_channel.scss
+++ b/app/assets/stylesheets/utility_windows/add_channel.scss
@@ -31,9 +31,26 @@
 
       li {
         cursor: pointer;
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
+        align-items: baseline;
+
+        padding: 0px 5px;
 
         &:hover {
-          background-color: $square-title-logo-yellow;
+          background-color: $highlight-color;
+        }
+
+        button {
+          border: none;
+          box-shadow: none;
+          background-color: transparent;
+          color: $link-color;
+
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
