--- a/app/assets/stylesheets/utility_windows/create_private_chat.scss
+++ b/app/assets/stylesheets/utility_windows/create_private_chat.scss
@@ -10,4 +10,48 @@
   padding: 5px;
 
   box-sizing: border-box;
+
+  input {
+    width: 100%;
+  }
+
+  ul {
+    @include text-input;
+
+    padding: 5px 8px;
+    margin: 5px 0px;
+    height: 100px;
+
+    overflow: scroll;
+
+    li {
+      cursor: pointer;
+      display: flex;
+      flex-flow: row;
+      justify-content: space-between;
+      align-items: baseline;
+      padding: 0px 5px;
+
+      &:hover {
+        background-color: WhiteSmoke;
+      }
+
+      button {
+        border: none;
+        box-shadow: none;
+        background-color: transparent;
+        color: $link-color;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  ul:first-of-type {
+    li:first-child {
+      background-color: WhiteSmoke;
+    }
+  }
 }
