Update find channel window

--- a/app/assets/stylesheets/utility_windows/add_channel.scss
+++ b/app/assets/stylesheets/utility_windows/add_channel.scss
@@ -44,6 +44,10 @@
         background-color: WhiteSmoke;
       }
 
+      &:first-of-type {
+        background-color: WhiteSmoke;
+      }
+
       button {
         border: none;
         box-shadow: none;
