--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -91,6 +91,11 @@ $content-spacing: 10px;
   h2 {
     font-size: 19px;
   }
+
+  p {
+    margin: 3px 0;
+    font-size: 10px;
+  }
 }
 
 .screenname {
